--- a/index.html
+++ b/index.html
@@ -1,12 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Calculator</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js" defer></script>
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <title>Calculator</title>
+  <link rel="stylesheet" href="style.css">
+  <script src="script.js" defer></script>
+</head>
 
-  <body>
-  </body>
+<body>
+  <div id="container">
+    <h1>display</h1>
+    <button id="clear">AC</button>
+    <button class="digit" id="nine">9</button>
+    <button class="digit" id="eight">8</button>
+    <button class="digit" id="seven">7</button>
+    <button class="digit" id="six">6</button>
+    <button class="digit" id="five">5</button>
+    <button class="digit" id="four">4</button>
+    <button class="digit" id="three">3</button>
+    <button class="digit" id="two">2</button>
+    <button class="digit" id="one">1</button>
+    <button class="digit" id="zero">0</button>
+    <button class="operator" id="divide">/</button>
+    <button class="operator" id="multiply">*</button>
+    <button class="operator" id="subtract">-</button>
+    <button class="operator" id="add">+</button>
+    <button id="equals">=</button>
+  </div>
+</body>
 </html>
