Fix pressNumber() function to allow more than single digits

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <div id="container">
-    <h1 id="display">display</h1>
+    <h1 id="display"></h1>
     <button id="clear">AC</button>
     <button class="digit" id="nine">9</button>
     <button class="digit" id="eight">8</button>
