Add allClearButton to reset stored values after a click

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div id="container">
     <h1 id="display"></h1>
-    <button id="clear">AC</button>
+    <button id="allClear">AC</button>
     <button class="digit" id="nine">9</button>
     <button class="digit" id="eight">8</button>
     <button class="digit" id="seven">7</button>
