Set up calculator layout with css

--- a/index.html
+++ b/index.html
@@ -10,22 +10,28 @@
 <body>
   <div id="container">
     <h1 id="display"></h1>
-    <button id="allClear">AC</button>
-    <button class="digit" id="nine">9</button>
-    <button class="digit" id="eight">8</button>
-    <button class="digit" id="seven">7</button>
-    <button class="digit" id="six">6</button>
-    <button class="digit" id="five">5</button>
-    <button class="digit" id="four">4</button>
-    <button class="digit" id="three">3</button>
-    <button class="digit" id="two">2</button>
-    <button class="digit" id="one">1</button>
-    <button class="digit" id="zero">0</button>
-    <button class="operator" id="divide">/</button>
-    <button class="operator" id="multiply">*</button>
-    <button class="operator" id="subtract">-</button>
-    <button class="operator" id="add">+</button>
-    <button id="equals">=</button>
+    <div id="calculator">
+      <button id="allClear">AC</button>
+      <div id="numbers">
+        <button class="digit" id="nine">9</button>
+        <button class="digit" id="eight">8</button>
+        <button class="digit" id="seven">7</button>
+        <button class="digit" id="six">6</button>
+        <button class="digit" id="five">5</button>
+        <button class="digit" id="four">4</button>
+        <button class="digit" id="three">3</button>
+        <button class="digit" id="two">2</button>
+        <button class="digit" id="one">1</button>
+        <button class="digit" id="zero">0</button>
+      </div>
+      <div id="operations">
+        <button class="operator" id="divide">/</button>
+        <button class="operator" id="multiply">*</button>
+        <button class="operator" id="subtract">-</button>
+        <button class="operator" id="add">+</button>
+        <button id="equals">=</button>
+      </div>
+    </div>
   </div>
 </body>
 </html>
