Add decimal point button

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <button class="digit" id="three">3</button>
         <button class="digit" id="two">2</button>
         <button class="digit" id="one">1</button>
+        <button id="decimal">.</button>
         <button class="digit" id="zero">0</button>
       </div>
       <div id="operations">
